--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <nav>
       <div class="nav-container">
-        <a href="index.html">
+        <a href="/">
             <img src="assets/images/logo.png" alt="Logo" class="nav-logo">
         </a>
         <div class="nav-links">
-            <a href="index.html" class="active">work</a>
-            <a href="about.html">about</a>
+            <a href="/" class="active">work</a>
+            <a href="/about">about</a>
             <a class="button" href="https://drive.google.com/file/d/1YtDi49Dao6Ei3i-rhFZY4w2VZYCJpwPu/view?usp=sharing" target="_blank">resume</a>
         </div>
       </div>
@@ -39,8 +39,9 @@
                 <span class="role">designer</span>,
                 <span class="role">researcher</span>
             </p>
-            <p class="subtitle"> @ UC Santa Cruz</p>
-            <div class="social">
+            <div class="location-social-wrapper">
+                <p class="location">@ UC Santa Cruz</p>
+                <div class="social">
 
                 <a href="mailto:shalinimraval@gmail.com" 
                     aria-label="Email"
@@ -84,6 +85,7 @@
                     </g>
                 </svg>
             </a>
+                </div>
             </div>
         </div>
 
