--- a/projects/pearl/pearl.html
+++ b/projects/pearl/pearl.html
@@ -661,18 +661,18 @@
 
   <nav>
     <div class="nav-container">
-      <a href="../../index.html">
+      <a href="/">
         <img src="../../assets/images/logo.png" alt="Logo" class="nav-logo">
       </a>
       <div class="nav-links">
-        <a href="../../index.html">work</a>
-        <a href="../../about.html">about</a>
+        <a href="/">work</a>
+        <a href="/about">about</a>
         <a class="button" href="https://drive.google.com/file/d/1iiaJBpraR9XzEFWPnvUJw-jEm0uLX308/view?usp=sharing" target="_blank">resume</a>
       </div>
     </div>
   </nav>
 
-  <a href="../../index.html" class="back-arrow">←</a>
+  <a href="/" class="back-arrow">←</a>
 
   <main class="project-page">
 
