--- a/about.html
+++ b/about.html
@@ -470,14 +470,14 @@
       animation-duration: 8s;
     }
   </style>
-  <nav>
-    <div class="nav-container">
-      <a href="index.html">
-        <img src="assets/images/logo.png" alt="Logo" class="nav-logo">
+    <nav>
+      <div class="nav-container">
+      <a href="/">
+          <img src="assets/images/logo.png" alt="Logo" class="nav-logo">
       </a>
       <div class="nav-links">
-        <a href="index.html">work</a>
-        <a href="about.html" class="active">about</a>
+        <a href="/">work</a>
+        <a href="/about" class="active">about</a>
         <a class="button" href="https://drive.google.com/file/d/1YtDi49Dao6Ei3i-rhFZY4w2VZYCJpwPu/view?usp=sharing" target="_blank">resume</a>
       </div>
     </div>
