--- a/projects/seals/seals.html
+++ b/projects/seals/seals.html
@@ -102,18 +102,18 @@
 <body>
   <nav>
     <div class="nav-container">
-      <a href="../../index.html">
+      <a href="/">
         <img src="../../assets/images/logo.png" alt="Logo" class="nav-logo">
       </a>
       <div class="nav-links">
-        <a href="../../index.html">work</a>
-        <a href="../../about.html">about</a>
+        <a href="/">work</a>
+        <a href="/about">about</a>
         <a class="button" href="https://drive.google.com/file/d/1YtDi49Dao6Ei3i-rhFZY4w2VZYCJpwPu/view?usp=sharing" target="_blank">resume</a>
       </div>
     </div>
   </nav>
 
-  <a href="../../index.html" class="back-arrow">←</a>
+  <a href="/" class="back-arrow">←</a>
 
   <main class="project-page">
     <header class="project-hero reveal">
